        efficient replacement of \code{sapply(x, length)} and similar.

        R-3.3.0: \code{lengths()} considers methods for \code{length}
        and \code{[[} on \code{x}, so it should work automatically on
        any objects for which appropriate methods on those generics
        are defined.
}}

  \subsection{BUG FIXES}{
  \itemize{
  \item Fixed a bug that caused the following to fail with an error,
        rather than print the square root of two:
\preformatted{    f <- function (...) ..1(2); f(sqrt)
}
        This bug also exists in R Core versions to at least R-3.4.4.
  \item Fixed bugs in which \code{as.numeric("0x1.1.1p0")} didn't give an error,
        and \code{as.numeric("0x1fffffffffffff.7ffp0")} gave an 
        incorrectly-rounded result.  Both bugs (and related ones previously
        fixed in pqR) exist in R-3.4.4.
  \item Fixed a bug that caused
        \code{print(c(F,NA,NA,F),na.print="abcdef")} to
        produce incorrectly-formatted output.  This bug also exists in
        R Core versions to at least R-3.4.4.
  \item The documentation on \code{debug} and \code{debugonce} has been
        fixed to remove mention of the \code{text} and \code{condition} 
        arguments. These arguments were documented in R-2.10.0, and in 
        subsequent R Core versions to at least R-3.4.1, but they have never 
        been implemented as documented, but rather have always been 
        completely ignored.
  \item Fixed two pqR bugs illustrated by the following:
\preformatted{    a <- c(2,3); e <- new.env(); e[["x"]] <- a; a[2] <- 9; e$x[2]
    L <- list(1,2); y <- list(2+1); L[2] <- y; y[[1]][1] <- 9; L[[2]]
}
        For both lines above, the value printed was 9 rather than 3.
  \item Previously, \code{length(plist)<-n} did not work when \code{plist}
        was a pairlist, but it does now.  This bug was also fixed independently
        in R-3.4.3.
  \item Fixed a bug illustrated by the following:
\preformatted{    L <- list(c(3,4))